--- a/Content/Site.css
+++ b/Content/Site.css
@@ -4,7 +4,6 @@
     padding-left: 15px;
     padding-right: 15px;
     margin-top: 20px;
-
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
@@ -56,152 +55,158 @@ Template: jquery
 
 a,
 .title {
-	color: #b24926;
+    color: #b24926;
 }
 
 #content a:hover {
-	color: #333;
+    color: #333;
 }
 
 #banner-secondary p.intro {
-	padding: 0;
-	float: left;
-	width: 50%;
+    padding: 0;
+    float: left;
+    width: 50%;
 }
 
 #banner-secondary .download-box {
-	border: 1px solid #aaa;
-	background: #333;
-	background: -webkit-linear-gradient(left, #333 0%, #444 100%);
-	background: linear-gradient(to right, #333 0%, #444 100%);
-	float: right;
-	width: 40%;
-	text-align: center;
-	font-size: 20px;
-	padding: 10px;
-	border-radius: 5px;
-	box-shadow: 0 0 8px rgba(0, 0, 0, 0.8);
+    border: 1px solid #aaa;
+    background: #333;
+    background: -webkit-linear-gradient(left, #333 0%, #444 100%);
+    background: linear-gradient(to right, #333 0%, #444 100%);
+    float: right;
+    width: 40%;
+    text-align: center;
+    font-size: 20px;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.8);
 }
 
-#banner-secondary .download-box h2 {
-	color: #71d1ff;
-	font-size: 26px;
-}
+    #banner-secondary .download-box h2 {
+        color: #71d1ff;
+        font-size: 26px;
+    }
 
-#banner-secondary .download-box .button {
-	float: none;
-	display: block;
-	margin-top: 15px;
-}
+    #banner-secondary .download-box .button {
+        float: none;
+        display: block;
+        margin-top: 15px;
+    }
 
-#banner-secondary .download-box p {
-	margin: 15px 0 5px;
-}
+    #banner-secondary .download-box p {
+        margin: 15px 0 5px;
+    }
 
 #banner-secondary .download-option {
-	width: 45%;
-	float: left;
-	font-size: 16px;
+    width: 45%;
+    float: left;
+    font-size: 16px;
 }
 
 #banner-secondary .download-legacy {
-	float: right;
+    float: right;
 }
 
 #banner-secondary .download-option span {
-	display: block;
-	font-size: 14px;
-	color: #71d1ff;
+    display: block;
+    font-size: 14px;
+    color: #71d1ff;
 }
 
 #content .dev-links {
-	float: right;
-	width: 30%;
-	margin: -15px -25px .5em 1em;
-	padding: 1em;
-	border: 1px solid #666;
-	border-width: 0 0 1px 1px;
-	border-radius: 0 0 0 5px;
-	box-shadow: -2px 2px 10px -2px #666;
+    float: right;
+    width: 30%;
+    margin: -15px -25px .5em 1em;
+    padding: 1em;
+    border: 1px solid #666;
+    border-width: 0 0 1px 1px;
+    border-radius: 0 0 0 5px;
+    box-shadow: -2px 2px 10px -2px #666;
 }
 
-#content .dev-links ul {
-	margin: 0;
-}
+    #content .dev-links ul {
+        margin: 0;
+    }
 
-#content .dev-links li {
-	padding: 0;
-	margin: .25em 0 .25em 1em;
-	background-image: none;
-}
+    #content .dev-links li {
+        padding: 0;
+        margin: .25em 0 .25em 1em;
+        background-image: none;
+    }
 
 .demo-list {
-	float: right;
-	width: 25%;
+    float: right;
+    width: 25%;
 }
 
-.demo-list h2 {
-	font-weight: normal;
-	margin-bottom: 0;
-}
+    .demo-list h2 {
+        font-weight: normal;
+        margin-bottom: 0;
+    }
 
 #content .demo-list ul {
-	width: 100%;
-	border-top: 1px solid #ccc;
-	margin: 0;
+    width: 100%;
+    border-top: 1px solid #ccc;
+    margin: 0;
 }
 
 #content .demo-list li {
-	border-bottom: 1px solid #ccc;
-	margin: 0;
-	padding: 0;
-	background: #eee;
+    border-bottom: 1px solid #ccc;
+    margin: 0;
+    padding: 0;
+    background: #eee;
 }
 
 #content .demo-list .active {
-	background: #fff;
+    background: #fff;
+}
+
+
+.ValidationErrorsBlock {
+    margin-top: 25px;
+    color: red;
 }
 
 #content .demo-list a {
-	text-decoration: none;
-	display: block;
-	font-weight: bold;
-	font-size: 13px;
-	color: #3f3f3f;
-	text-shadow: 1px 1px #fff;
-	padding: 2% 4%;
+    text-decoration: none;
+    display: block;
+    font-weight: bold;
+    font-size: 13px;
+    color: #3f3f3f;
+    text-shadow: 1px 1px #fff;
+    padding: 2% 4%;
 }
 
 .demo-frame {
-	width: 70%;
-	height: 350px;
+    width: 70%;
+    height: 350px;
 }
 
 .view-source a {
-	cursor: pointer;
+    cursor: pointer;
 }
 
 .view-source > div {
-	overflow: hidden;
-	display: none;
+    overflow: hidden;
+    display: none;
 }
 
 @media all and (max-width: 600px) {
-	#banner-secondary p.intro,
-	#banner-secondary .download-box {
-		float: none;
-		width: auto;
-	}
+    #banner-secondary p.intro,
+    #banner-secondary .download-box {
+        float: none;
+        width: auto;
+    }
 
-	#banner-secondary .download-box {
-		overflow: auto;
-	}
+    #banner-secondary .download-box {
+        overflow: auto;
+    }
 }
 
 @media only screen and (max-width: 480px) {
-	#content .dev-links {
-		width: 55%;
-		margin: -15px -29px .5em 1em;
-		overflow: hidden;
-	}
+    #content .dev-links {
+        width: 55%;
+        margin: -15px -29px .5em 1em;
+        overflow: hidden;
+    }
 }
